syntax = "proto3";

package base.v1;

import "model/v1/osint.proto";
import "model/v1/related.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/omnsight/omnibasement/gen/base/v1;base";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "Foundation API";
    version: "1.0.0";
    description: "The Foundation API handles data for data CRUD operations.";
    contact: {
      name: "Omni Team";
      url: "";
      email: "";
    };
    license: {
      name: "Apache 2.0";
      url: "https://www.apache.org/licenses/LICENSE-2.0.html";
    };
  };
  // You can also set other top-level fields like schemes, host, etc.
  schemes: [HTTPS];
  consumes: "application/json";
  produces: "application/json";
};

// EventService provides operations for managing events
service EventService {
  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {
    option (google.api.http) = {
      get: "/v1/events/{key}"
    };
  }

  rpc CreateEvent(CreateEventRequest) returns (CreateEventResponse) {
    option (google.api.http) = {
      post: "/v1/events"
      body: "event"
    };
  }

  rpc UpdateEvent(UpdateEventRequest) returns (UpdateEventResponse) {
    option (google.api.http) = {
      put: "/v1/events/{key}"
      body: "event"
    };
  }

  rpc DeleteEvent(DeleteEventRequest) returns (DeleteEventResponse) {
    option (google.api.http) = {
      delete: "/v1/events/{key}"
    };
  }
}

// Event messages
message GetEventRequest {
  string key = 1;
}

message GetEventResponse {
  model.v1.Event event = 1;
}

message CreateEventRequest {
  model.v1.Event event = 1;
}

message CreateEventResponse {
  model.v1.Event event = 1;
}

message UpdateEventRequest {
  string key = 1;
  model.v1.Event event = 2;
}

message UpdateEventResponse {
  model.v1.Event event = 1;
}

message DeleteEventRequest {
  string key = 1;
}

message DeleteEventResponse {
}